# UR3e_VM

./: README.md  setup.sh
src/: startUrProjectDR.sh
src/config/: my_robot_calibration.yaml
src/go_to_pose/: CMakeLists.txt
src/go_to_pose/src/: go_to_all_poses.cpp  go_to_target_pose.cpp  go_to_target_pose2.cpp  go_to_target_pose4.cpp  go_to_target_pose8.cpp  go_to_target_pose_adapted.cpp  go_to_target_pose_adapted3.cpp
src/piece_juggler/: CMakeLists.txt  package.xml
src/piece_juggler/src/: basic_piece_juggler.cpp  random_piece_juggler.cpp
src/py_server/: server.py
src/react_webApp/: package-lock.json
src/react_webApp/src/: App.css  App.jsx  index.css
src/robot-ui/: index.html  package.json
src/robot-ui/src/: config.js
src/stl_models/: CMakeLists.txt  package.xml
src/stl_models/meshes/: UR3e_enviroment_m_v1.stl
src/stl_models/src/: enviroment.cpp  gripper.cpp
src/ur_action_interface/: CMakeLists.txt  package.xml
src/ur_action_interface/action/: MovePiece.action
src/ur_action_server_cpp/: CMakeLists.txt  package.xml
src/ur_action_server_cpp/src/: callibrate.cpp  move_piece_server.cpp
